Changelog
=========

1.9.2 (unreleased)
------------------

- Nothing changed yet.


1.9.1 (2017-08-08)
------------------

- Prevent invalid url if the object has a get parameter in his path.
  [lknoepfel]

- Remove search viewlet submit from tabindex.
  [lknoepfel]


1.9.0 (2017-06-28)
------------------

- Implement first suggestion on livesearch view, if suggestions are enabled.
  [mathias.leimgruber]


1.8.6 (2017-06-06)
------------------

- Hide and order the viewlets for all skins and not only for the "Sunburst Theme"-skin
  [elioschmutz]

- Prevent invalid url if the object has a get parameter in his path.
  [lknoepfel]


1.8.5 (2017-04-19)
------------------

- Lower searchwords in ISearchwords indexer, since the value is always lowered in ftw.solr.
  This applies only for DX content.
  [mathias.leimgruber]

- Fix font for livesearch results.
  [Kevin Bieri]


1.8.4 (2016-12-16)
------------------

- Make getting the facets more robust which caused projects having customizations
  of selected facets to crash when displaying the search results.
  [mbaechtold]


1.8.3 (2016-12-15)
------------------

- Remove hidden input from tabindex.
  [mathias.leimgruber]

- Only append "Search in current folder" option to livesearch if not on plone root.
  [mathias.leimgruber]


1.8.2 (2016-11-24)
------------------

- Scan for external links after every search page refresh.
  [mathias.leimgruber]

- Do not use TALES string expressions for facet links, since it automatically transforms
  chars into html entities.
  The facet links were like "&amp;amp;amp;amp;" every time you add/remove a facet.
  Since we have three facts by default this happened tree times on every click.
  [mathias.leimgruber]


1.8.1 (2016-11-04)
------------------

- Fix suggestion with umlauts by decode it to unicode.
  [mathias.leimgruber]

- Avoid AttributeError "solr_response" on solr errors. [jone]


1.8.0 (2016-10-31)
------------------
