@@ -4,7 +4,8 @@ Changelog
 1.9.2 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Also prevent a invalid urls generated by the livesearch.py
+  [mathias.leimgruber]
 
 
 1.9.1 (2017-08-08)
